[package]
name = "aw"
version = "0.0.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.2", default-features = false, features = ["rt-multi-thread", "rt"] }
reqwest = { version = "0.12.5", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde_json = { version = "1.0.120", default-features = false, features = ["alloc"] }
serde = { version = "1.0.204", features = ["derive"] }
ring = { version = "0.17.8", default-features = false}
indicatif = "0.17.8"
chrono = "0.4.38"
base64 = "0.22.1"
rand = "0.8.5"

[[bin]]
name = "aw"
path = "src/cli.rs"

[lib]
name = "ld_"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1